# liteplayer_esp32

./: .gitignore  .gitmodules  README.md
components/liteplayeradapter/: CMakeLists.txt  component.mk  source_esp32_flashtone_wrapper.c
components/liteplayeradapter/include/: source_esp32_flashtone_wrapper.h
components/liteplayercore/: CMakeLists.txt  component.mk  liteplayer_debug.c
components/sysutils/: CMakeLists.txt  component.mk
examples/flash_tone_player/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
examples/flash_tone_player/main/: CMakeLists.txt  liteplayer_demo.c
examples/flash_tone_player/tone/: audio_tone_uri.c  audio_tone_uri.h
examples/http_source_player/: CMakeLists.txt  partitions.csv
